 ! API: During a drag and drop operation a DockStation now appears to consist of many layers instead of only one layer. This allows more complex rules to find the target of a drop operation. The new layers are described by the interface "DockStationDropLevel", the concept of the "override zone" has been completely replaced by this new layer mechanism.
 - Bugfix: SplitDockStation did ignore the DockAcceptance in certain situations
 - Bugfix: VetoableDockRelocatorListener.searched is now actually called
 - API: Workarounds-API is now public, clients can register custom workarounds (e.g. to resolve issues with JWebBrowser).
 
[v1.1.1p6a]
 - Bugfix: Memory Leak in FlatTab, listener was added twice
 - Bugfix: Memory Leaf in RoundRectButton, listener was not removed properly 
 - Bugfix: SplitDockStation did not fire dockable removing eveng if the method "dropOver" was called
 - API: CControl offers the new method "getFocusedCDockable", which returns the currently focused CDockable or null 
 - API: Added DockFrontend.deleteAll, which quickly deletes all settings of the frontend.
 ! API: DockFrontend.readXml/read now deletes the existing settings, this is how most developers would expect the method to work.

[v1.1.1p6b]
 - API: The new interface DockActionImportanceOrder allows to define which actions are the most important actions, if there is not enough space to show all actions the most important actions stay visible a bit longer
 - API: If tabs and actions are shown, tabs are now hidden before actions are hidden

[Todo]
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.
- SingleParentRemover: Implement bugfix as described in the file